# sasayaku

./: .gitignore  CMakeLists.txt  QUICKSTART.md  README.md  meson.build
data/: default_modes.json  meson.build  org.sasayaku.Daemon.service.in  sasayaku-daemon.desktop.in
docs/superpowers/plans/: 2026-06-18-daemon-headless-dbus.md  2026-06-18-gnome-extension-indicator.md  2026-06-18-vulkan-whisper-acceleration.md
docs/superpowers/specs/: 2026-06-18-linux-gnome-accessibility-hud-design.md
gnome-extension/: install.sh
gnome-extension/sasayaku@wmeddie.github/: daemonClient.js  extension.js  focusTracker.js  hud.js  indicator.js  injector.js  metadata.json  prefs.js  stylesheet.css
gnome-extension/sasayaku@wmeddie.github/schemas/: org.gnome.shell.extensions.sasayaku.gschema.xml
macos/: CMakeLists.txt  build.sh  project.yml
macos/Sasayaku/: Sasayaku-Bridging-Header.h
macos/Sasayaku.xcodeproj/: project.pbxproj
macos/Sasayaku/App/: AppDelegate.swift  HotkeyManager.swift  OverlayPanel.swift  SasayakuApp.swift
macos/Sasayaku/Bridge/: SasayakuBridge.h  SasayakuBridge.mm
macos/Sasayaku/Platform/: AudioCaptureMacOS.mm  AutoPasteMacOS.mm  ClipboardMacOS.mm  WindowTrackerMacOS.mm
macos/Sasayaku/Resources/: Info.plist  Sasayaku.entitlements
macos/Sasayaku/ViewModels/: RecordingViewModel.swift
macos/Sasayaku/Views/: ModesView.swift  OverlayView.swift  RecordingView.swift  SettingsView.swift
src/: meson.build
src/ai/: openai_client.cpp  openai_client.hpp  prompt_templates.cpp  prompt_templates.hpp
src/cli/: main.cpp  toggle.cpp
src/core/: audio_capture.cpp  audio_capture.hpp  audio_processor.cpp  audio_processor.hpp  common.hpp  transcription.cpp  transcription.hpp  whisper_wrapper.cpp  whisper_wrapper.hpp
src/daemon/: dbus_helpers.cpp  dbus_helpers.hpp  dbus_helpers_test.cpp  dbus_service.cpp  dbus_service.hpp  main.cpp  mode_manager.cpp  mode_manager.hpp  recording_coordinator.cpp  recording_coordinator.hpp  window_tracker.cpp  window_tracker.hpp
src/tray/: tray_helper.cpp
src/ui/: recording_window.cpp  recording_window.hpp  settings_window.cpp  settings_window.hpp
src/utils/: auto_paste.cpp  auto_paste.hpp  clipboard.cpp  clipboard.hpp  config_manager.cpp  config_manager.hpp
windows/: CMakeLists.txt  build.bat
windows/App/: HotkeyManager.cpp  HotkeyManager.hpp  OverlayWindow.cpp  OverlayWindow.hpp  TrayIcon.cpp  TrayIcon.hpp  main.cpp
windows/Platform/: AudioCaptureWindows.cpp  AutoPasteWindows.cpp  ClipboardWindows.cpp  WinUtils.hpp  WindowTrackerWindows.cpp
windows/Resources/: app.manifest
windows/Toggle/: toggle.cpp
